# gpu-rodinia

./: .gitignore  CMakeLists.txt  Makefile  TODO
common/: common.mk
cuda/: CMakeLists.txt
cuda/backprop/: CMakeLists.txt  backprop.c  backprop_cuda.cu  facetrain.c  imagenet.c  imagenet.h
cuda/bfs/: CMakeLists.txt  bfs.cu
cuda/cfd/: CMakeLists.txt  Makefile
cuda/gaussian/: CMakeLists.txt
cuda/heartwall/: CMakeLists.txt
cuda/hotspot/: CMakeLists.txt
cuda/kmeans/: CMakeLists.txt  cluster.c  kmeans.c
cuda/lavaMD/: CMakeLists.txt  main.c
cuda/lud/: CMakeLists.txt
cuda/mummergpu/: CMakeLists.txt
cuda/mummergpu/src/: mummergpu_kernel.cu  suffix-tree.cpp
cuda/nn/: CMakeLists.txt  hurricane_gen.c
cuda/nw/: CMakeLists.txt
cuda/particlefilter/: CMakeLists.txt  ex_particle_CUDA_naive_seq.cu
cuda/pathfinder/: CMakeLists.txt
cuda/srad/: CMakeLists.txt
cuda/streamcluster/: CMakeLists.txt
opencl/b+tree/: Makefile
opencl/b+tree/kernel/: kernel_gpu_opencl_wrapper.c  kernel_gpu_opencl_wrapper_2.c
opencl/backprop/: Makefile
opencl/bfs/: Makefile
opencl/cfd/: Makefile  euler3d.cpp
opencl/heartwall/kernel/: kernel_gpu_opencl_wrapper.c
opencl/hotspot/: Makefile
opencl/kmeans/: Makefile
opencl/lavaMD/kernel/: kernel_gpu_opencl_wrapper.c
opencl/myocyte/kernel/: kernel_gpu_opencl_wrapper.c
opencl/srad/kernel/: kernel_gpu_opencl_wrapper.c
openmp/mummergpu/src/: mummergpu.cu  suffix-tree.cpp
openmp/particlefilter/: particle_filter
