cmake_minimum_required(VERSION 3.10)

project(Rodinia-CUDA LANGUAGES CXX CUDA)

add_subdirectory(backprop)
add_subdirectory(bfs)
add_subdirectory(cfd)
add_subdirectory(gaussian)
add_subdirectory(heartwall)

add_custom_target(hotspot COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/hotspot)
add_custom_target(kmeans COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/kmeans)
add_custom_target(lavaMD COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lavaMD)
add_custom_target(lud COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lud)
add_custom_target(nn COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/nn)
add_custom_target(nw COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/nw)
add_custom_target(srad COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/srad)
add_custom_target(streamcluster COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/streamcluster)
add_custom_target(particlefilter COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/particlefilter)
add_custom_target(pathfinder COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/pathfinder)
add_custom_target(mummergpu COMMAND make WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/mummergpu)
