cmake_minimum_required(VERSION 3.10)

project(Rodinia-CUDA LANGUAGES CXX CUDA)

add_subdirectory(backprop)
add_subdirectory(bfs)
add_subdirectory(cfd)
add_subdirectory(gaussian)
add_subdirectory(heartwall)
add_subdirectory(hotspot)
add_subdirectory(kmeans)
add_subdirectory(lavaMD)
add_subdirectory(lud)
add_subdirectory(nn)
add_subdirectory(nw)
add_subdirectory(srad)
add_subdirectory(streamcluster)
add_subdirectory(particlefilter)
add_subdirectory(pathfinder)
add_subdirectory(mummergpu)